[tool.poetry]
name = "put"
version = "0.1.0"
description = "A simple and robust file upload server"
authors = ["Jason Cameron <put@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
