[tool.poetry]
name = "put"
version = "0.1.0"
description = "A simple and robust file upload server"
authors = ["Jason Cameron <put@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
tuspyserver = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.8.0"
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
