[tool.poetry]
name = "put"
version = "0.1.0"
description = "A simple and robust file upload server"
authors = ["Jason Cameron <put@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
aiofiles = "^24.1.0"
boto3 = "^1.35.34"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.8.0"
black = "^24.8.0"
mypy = "^1.11.2"
types-aiofiles = "^24.1.0.20240626"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[too.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
enable_incomplete_feature = "NewGenericSyntax"


